# nontype_functional

./: .clang-format  .gitignore  CMakeLists.txt  CMakeSettings.json  README.md  xmake.lua
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: cmake.yml  msvc-analysis.yml
examples/: .clang-format  CMakeLists.txt  listing_1.cpp  listing_2.cpp  listing_3.cpp
function_ref_nontype/: CMakeLists.txt  function_ref_nontype.cpp  function_ref_nontype.h
include/: __functional_base.h  function.h  function_ref.h
include/std23/: __functional_base.h  constant_wrapper.hpp  function.h  function_ref.h  move_only_function.h
modules/: nontype_functional.cppm
tests/: CMakeLists.txt  common_callables.cpp  common_callables.h  main.cpp  purecall_in_ctor.cpp  purecall_in_ctor.h  test_basics.cpp  test_call_pattern.cpp  test_const.cpp  test_const_noexcept.cpp  test_constexpr.cpp  test_noexcept.cpp  test_nontype.cpp  test_pending_purecall.cpp  test_pmf_cast.cpp  test_safety.cpp
tests/function/: CMakeLists.txt  common_callables.cpp  common_callables.h  main.cpp  test_basics.cpp  test_ctad.cpp  test_nontype.cpp  test_nullable.cpp  test_reference_semantics.cpp  test_va_args.cpp  test_value_semantics.cpp
tests/function_ref/: CMakeLists.txt  common_callables.cpp  common_callables.h  main.cpp  test_basics.cpp  test_call_pattern.cpp  test_const.cpp  test_const_noexcept.cpp  test_constexpr.cpp  test_constinit.cpp  test_ctad.cpp  test_noexcept.cpp  test_nontype.cpp  test_return_reference.cpp  test_safety.cpp
tests/include/: common.h
tests/move_only_function/: CMakeLists.txt  common_callables.cpp  common_callables.h  test_basics.cpp  test_cvref.cpp  test_inplace.cpp  test_noexcept.cpp  test_nontype.cpp  test_nullable.cpp  test_reference_semantics.cpp  test_return_reference.cpp  test_unique.cpp  test_value_semantics.cpp
