# CMakeList.txt : CMake project for function_ref_nontype, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (function_ref_nontype "function_ref_nontype.cpp" "function_ref_nontype.h")

# TODO: Add tests and install targets if needed.
